# ZIGBUG

./: NOTES.txt  meson.build  meson_options.txt  rom_mon.c
include/: compiler_abstraction.h  interface.h  sw_ver.h.in
include/utils/: string.h
src/common/: main.c  meson.build
src/posix/: init.c  meson.build  posix_private.h  simmem.c  terminal.c
src/utils/: meson.build  string.c
